0.7.2
- Adds Padding enum (.pkcs5, .pkcs7, .noPadding, .zeroPadding)
- Removes Generics from the public API.
- Slightly improves SHA1, SHA2, SHA3 performance.

0.7.1
- Swift 4.0 compatibility release

0.7.0
- Swift 3.2 compatibility release

0.6.9
- Fixed padding issue where padding was not properly added in CTR mode.
- Fixed thrown error on decrypting empty string,
- Fixed CI build script.
- Added String.encryptToBase64()

0.6.8
- Speed up MD5()
- Faster Array(hex:)
- Improve AES performance
- Fix tvOS bitcode
- Fix Blowfish CFB, OFB, CTR block modes.
- Fix Blowfish for 32-bit arch.
- Fix ChaCha20 preconditions

0.6.7
- Release for Xcode 8.2
- Fix playground example

0.6.6
- Rework ChaCha20
- Fix Poly1305

0.6.5
- Significant performance improvement when processing lange amount of data.
- Degeneric functions and change Sequence -> Collection in generic constraints.

0.6.4
- More performance improvements
- Add convenient Digest.sha2(bytes:variant)
- New: Blowfish cipher

0.6.3
- Hotfix release
- Fixes bitPadding() that breaks Digests calculations, introduced in 0.6.2

0.6.2
- SHA performance improvements by using less Swift in Swift
- Fix public access to all digests classes

0.6.1
- Update tests.
- New: RandomBytesSequence urandom values on Linux.
- Throw appropriate error for AES with invalid input where padding is needed.
- Improve performance, especially to SHA-1, SHA-2, PBKDF and related.
- Set deployment targets for all platform. Fixes Carthage builds.
- New: SHA-3 implementation (request #291)
- SHA-1 conforms to Updatable protocol and may be calculated incrementally.
- SHA-2 conforms to Updatable protocol and may be calculated incrementally. 

0.6.0
- Remove bridge() workaround for Linux (not needed)
- make MD5() public
- Update README
- Convenience HMAC initializer for String input

0.6.0-beta2
- SHA-2 fix #319
- HashProtocol -> Digest and refactor
- MD5 conforms to Updatable protocol and may be calculated incrementally